fixed error adding jobs

--- a/src/main/resources/templates/job-detail.html
+++ b/src/main/resources/templates/job-detail.html
@@ -16,19 +16,19 @@
         </tr>
         <tr>
             <th>Employer</th>
-            <td th:text="${job.Employer}">nh</td>
+            <td th:text="${job.Employer}">Employer</td>
         </tr>
         <tr>
             <th>Location</th>
-            <td th:text="${job.Location}">eu</td>
+            <td th:text="${job.Location}">Location</td>
         </tr>
         <tr>
             <th>Position Type</th>
-            <td th:text="${job.positionType}">oe</td>
+            <td th:text="${job.positionType}">PositionType</td>
         </tr>
         <tr>
             <th>Skill</th>
-            <td th:text="${job.coreCompetency}">th</td>
+            <td th:text="${job.coreCompetency}">Skill</td>
         </tr>
     </table>
 </div>
