--- a/src/main/resources/templates/new-job.html
+++ b/src/main/resources/templates/new-job.html
@@ -54,7 +54,8 @@
             </select>
 
         </div>
-    <input type="submit" value=""Add Job"/>
+
+        <input type="submit" value="Add Job"/>
     </form>
 
 </div>
